# end-to-end-enc.-chat

./: .gitignore  README.md  pyproject.toml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fec2908553a_message_to_conversation.py  3061fe2138cd_message_table.py  ae48eeaf4fb9_init.py  c86fb5eea042_user_modal.py  f2fe47356209_conversation_table.py
backend/app/: api.py  broadcast.py  crud.py  di.py  main.py  models.py  redis.py  schemas.py  security.py  settings.py
backend/app/core/: settings.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: package-lock.json  package.json  vite.config.js
frontend/end-to-end-encr-chat/: index.html
frontend/src/: App.vue  env.d.ts  main.ts  type.ts  vite-env.d.ts
frontend/src/components/: ChatWindow.vue  LoginWindow.vue  MessageInput.vue  OnlineWindow.vue  ProfileWindow.vue
frontend/src/services/: api.ts  useAuth.ts  ws.ts
