[project]
name = "soccer-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "mirzaev.arsen",email = "mirzaev.a@cadesign.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
