[tool.poetry]
name = "end-to-end-encrypt-chat"
version = "0.1.0"
description = ""
authors = ["mirzaev.arsen <mirzaev.a@cadesign.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.129.2"
pydantic-settings = "^2.13.1"
uvicorn = "^0.41.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"